--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ body {
     background-color: #000000aa;
 }
 
+.subgrid:not([data-status='none']) > .tile {
+    opacity: 0.2;
+}
+
 .subgrid.active {
     box-shadow: inset 0 0 3px 0 rgba(0, 255, 0, 1);
 }
